--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Temp Mail Bot: Ignite the Solar Grid</title>
+  <title>Advance Temp Mail Bot: </title>
   <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@400;700&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
   <style>
     * {
@@ -211,12 +211,6 @@
         <li><strong>/inbox encoded_mail</strong>: Scans the latest email in your temp starfield.</li>
         <li><strong>/allinbox encoded_mail</strong>: Unleashes all emails in your temp vault.</li>
         <li><strong>/delete encoded_mail msgid</strong>: Vaporizes a specific email by ID.</li>
-        <li><strong>Admin Commands</strong>:
-          <ul>
-            <li><strong>/stats</strong>: Decodes galactic bot stats—users, emails, and more.</li>
-            <li><strong>/userinfo user_id</strong>: Pulls classified data on any user.</li>
-            <li><strong>/broadcast</strong>: Fires messages to all users (2/week max).</li>
-            <li><strong>ziddi_broadcast</strong>: Alternate broadcast for admin starlords.</li>
           </ul>
         </li>
       </ul>
