--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <div class="particle"></div>
   </div>
   <div class="container">
-    <h1 class="typing">Temp Mail Bot: Ignite the Solar Grid</h1>
+    <h1 class="typing">Advance Temp Mail Bot</h1>
 
     <div class="section">
       <h2>What is Temp Mail?</h2>
